; ModuleID = '/home/carl/AnghaBench/jq/src/extr_compile.c_gen_op_simple.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_compile.c_gen_op_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gen_op_simple(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call %struct.TYPE_2__* @opcode_describe(i32 %3)
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 1
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @inst_new(i32 %10)
  %12 = call i32 @inst_block(i32 %11)
  ret i32 %12
}

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.TYPE_2__* @opcode_describe(i32) #1

declare dso_local i32 @inst_block(i32) #1

declare dso_local i32 @inst_new(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
